# splunkguard-mcp

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
src/splunkguard_mcp/: __init__.py  __main__.py  agent.py  client.py  models.py  prompts.py
